# awesome-aws

./: .gitignore  README.md  pyproject.toml
common_code/shared_constructs/: config.py
common_code/shared_constructs/aws/: s3.py
lambda-batch-s3-solution/: README.md  deploy_shared_lambda_layer.sh  pyproject.toml  requirements.txt
lambda-batch-s3-solution/batch/file-preprocessor/: Dockerfile  README.md  example_usage.sh  main.py  requirements.txt
lambda-batch-s3-solution/batch/run-inference/: Dockerfile  README.md  example_usage.py  example_usage.sh  main.py  requirements.txt
lambda-batch-s3-solution/lambdas/: deploy_lambdas.sh
lambda-batch-s3-solution/lambdas/batch-job-parser/: lambda_function.py
lambda-batch-s3-solution/lambdas/get-job-status/: lambda_function.py
lambda-batch-s3-solution/lambdas/inference-preprocessor/: lambda_function.py
lambda-batch-s3-solution/lambdas/pre-signed-url-generator/: README.md  deploy.sh  example_usage.py  lambda_function.py  template.yaml
lambda-batch-s3-solution/lambdas/trigger-step-function-workflow/: example_usage.py  lambda_function.py
