[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "shared-constructs"
version = "1.0.7"
description = "AWS Solutions Architecture"
packages = [
    {include = "shared_constructs", from="common_code/"}
]
authors = ["Ahsin Shabbir <ashabbi00@gmail.com>"]
license="Open Source"
readme = "README.md"
repository = "https://github.com/ahsin-s/awesome-aws"
classifiers = []

[tool.poetry.dependencies]
python = ">=3.11"
boto3 = ">=1.38.23"
requests = ">=2.32.2"
ffmpeg-python = {version = "~0.2.0", optional=true}
torch = {version = "^2.7.0", optional=true}
openai-whisper = {version = ">=20240930,<20240931", optional=true}
pydantic = "^2.11.5"


[tool.poetry.extras]
deeplearning = ["torch", "openai-whisper"]
videoprocessing = ["ffmpeg-python"]