[project]
name = "lambda-batch-s3-solution"
version = "0.1.0"
description = ""
authors = [
    {name = "ahsin-s",email = "ashabbi00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared-constructs (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
